defconfig : add EAS stuff & remove HMP stuff
Signed-off-by: Thoreck <maulanafajar751@gmail.com>

--- a/arch/arm64/configs/X00TD_defconfig
+++ b/arch/arm64/configs/X00TD_defconfig
@@ -6,6 +6,7 @@ CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
+# CONFIG_SCHED_WALT is not set
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
@@ -16,6 +17,15 @@ CONFIG_RCU_NOCB_CPU_ALL=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
+
+#
+# FAIR Scheuler tunables
+#
+#
+# CONFIG_PELT_UTIL_HALFLIFE_32 is not set
+CONFIG_PELT_UTIL_HALFLIFE_16=y
+# CONFIG_PELT_UTIL_HALFLIFE_12 is not set
+# CONFIG_PELT_UTIL_HALFLIFE_8 is not set
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
@@ -25,12 +35,16 @@ CONFIG_CGROUP_SCHED=y
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
 CONFIG_RT_GROUP_SCHED=y
-CONFIG_SCHED_HMP=y
-CONFIG_SCHED_HMP_CSTATE_AWARE=y
-CONFIG_SCHED_CORE_CTL=y
+# CONFIG_SCHED_HMP is not set
+# CONFIG_SCHED_HMP_CSTATE_AWARE is not set
+# CONFIG_SCHED_CORE_CTL is not set
 CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 CONFIG_SCHED_TUNE=y
+CONFIG_DYNAMIC_STUNE_BOOST=y
+CONFIG_DEFAULT_USE_ENERGY_AWARE=y
+CONFIG_CPUSETS_ASSIST=y
+CONFIG_STUNE_ASSIST=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
@@ -85,11 +99,8 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_CPU_BOOST=y
 CONFIG_NET=y
 CONFIG_PACKET=y
@@ -726,3 +737,5 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
+CONFIG_ENERGY_MODEL=y
+CONFIG_LEGACY_ENERGY_MODEL_DT=y
