--- a/arch/arm64/configs/X00TD_defconfig
+++ b/arch/arm64/configs/X00TD_defconfig
@@ -64,7 +64,9 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_PARTITION_ADVANCED=y
 # CONFIG_IOSCHED_TEST is not set
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_ZEN=y
 CONFIG_MACH_ASUS=y
 CONFIG_MACH_ASUS_X00TD=y
 CONFIG_PCI=y
