X00TD: Enable usb fast charge mode

--- a/arch/arm64/configs/X00TD_defconfig
+++ b/arch/arm64/configs/X00TD_defconfig
@@ -742,3 +742,4 @@ CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_ENERGY_MODEL=y
 CONFIG_LEGACY_ENERGY_MODEL_DT=y
+CONFIG_FORCE_FAST_CHARGE=y
